Read rented-server logs and saves over FTP FTPS and SFTP (#36)
